[package]
name = "ws-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
# cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service", features = ["app"]}
cubeos-service = { path = "../../cubeos-service", features = ["app"]}
gpio = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
isis-eps-api = { path = "../../Eps/isis-eps-api" }
serial = "0.4.0"
failure = "0.1.8"
sha2 = "0.10.0"
cobs = "0.2.3"
simplelog = "^0.12.0"